--- a/AIChatServer/App.config
+++ b/AIChatServer/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="MyConnectionString" connectionString="Server=localhost;Database=aichat;User Id=root;Password=OlezkaTelezka;" />
+		<add name="aichat" connectionString="Server=localhost;Database=aichat;User Id=root;Password=OlezkaTelezka;" />
 	</connectionStrings>
 </configuration>
